# esp32_nat_router

./: .gitignore  CLAUDE.md  CMakeLists.txt  Layer2Bridging.md  Makefile  README.md  TESTING.md  build_all_targets.sh  code.txt  esp_nat_bridge.py  index.html  manifest.json  manifest_esp32_wifi.json  manifest_wt32_eth01.json  partitions_4mb.csv  partitions_8mb.csv  partitions_example.csv  platformio.ini  sdkconfig  sdkconfig psram  sdkconfig psram esp_system  sdkconfig psram esp_system wifi  sdkconfig psram esp_system wifi lwip-1  sdkconfig psram esp_system wifi lwip-1 lwip-2 sys-2  sdkconfig.defaults  sdkconfig.defaults.esp32_poe_iso  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32s3  sdkconfig.defaults.wt32_eth01  sdkconfig.old
.github/workflows/: release.yaml  shrinkHTML.py
components/acl/: CMakeLists.txt  acl.c  acl_nvs.c
components/acl/include/: acl.h
components/cmd_nvs/: cmd_nvs.c
components/cmd_router/: CMakeLists.txt  cmd_router.c  cmd_router.h  router_globals.h
components/cmd_system/: CMakeLists.txt  cmd_system.c  cmd_system.h
components/dhcpserver/: CMakeLists.txt  dhcpserver.c
components/dhcpserver/include/dhcpserver/: dhcpserver.h
components/http_server/: CMakeLists.txt  http_server.c  pages.h
components/http_server/include/: http_server.h
components/http_server/pages/: page_config.h  page_firewall.h  page_index.h  page_mappings.h  page_scan.h  page_setup.h  page_vpn.h
components/led_strip/: CMakeLists.txt  led_strip_rmt_encoder.c
components/mqtt_ha/: CMakeLists.txt  mqtt_ha.c
components/mqtt_ha/include/: mqtt_ha.h
components/oled_display/: CMakeLists.txt  font5x7.h  oled_display.c
components/oled_display/include/: oled_display.h
components/pcap_capture/: CMakeLists.txt  pcap_capture.c  pcap_ringbuf.c  pcap_ringbuf.h
components/pcap_capture/include/: pcap_capture.h
components/remote_console/: CMakeLists.txt  remote_console.c
components/remote_console/include/: remote_console.h
components/syslog/: CMakeLists.txt  syslog_client.c
components/syslog/include/: syslog_client.h
docs/plans/: 2026-04-05-slowfi-requirements.md
firmware_esp32/: build_info.txt
firmware_esp32c2/: build_info.txt
firmware_esp32c3/: build_info.txt
firmware_esp32c5/: build_info.txt
firmware_esp32c6/: build_info.txt
firmware_esp32s3/: build_info.txt
firmware_wt32_eth01/: build_info.txt
include/: client_stats.h  dhcp_lease_map.h  dhcp_reservations.h  led_strip_status.h  portmap.h  router_config.h  router_globals.h  vpn_config.h  web_password.h  wifi_config.h
main/: CMakeLists.txt  Kconfig.projbuild  acl_nvs.c  cmd_decl.h  cmd_repeater.c  cmd_repeater.h  dhcp_helpers.c  dhcp_helpers.h  dhcp_lease_map.c  dhcp_lease_map.h  dhcp_manager.c  dhcp_xid_map.c  dhcp_xid_map.h  esp32_nat_router.c  esp32_nat_router.h  favicon_png.h  fdb.c  fdb.h  http_server.c  idf_component.yml  led_status.c  led_status.h  led_strip_status.c  mdns_responder.c  mdns_responder.h  netif_hooks.c  pages.h  portmap.c  repeater_config.h  repeater_forward.c  repeater_forward.h  vpn_manager.c
